--- a/crates/hej/Cargo.toml
+++ b/crates/hej/Cargo.toml
@@ -18,3 +18,6 @@ chii.workspace = true
 eyre.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+
+[dev-dependencies]
+tracing-subscriber.workspace = true
