hej should be complete. missing tests

--- a/crates/hej/Cargo.toml
+++ b/crates/hej/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hej"
-description = "ELM architecture widget library, built on top of tokio."
+description = "ELM architecture widget library, built on top of tokio and chii."
 readme = "README.md"
 authors.workspace = true
 edition.workspace = true
