--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,9 @@ tokio = { version = "1", features = ["full"] }
 
 tracing = "0.1"
 tracing-subscriber = "0.3"
+
+raw-window-handle = "0.6.0"
+
+smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit" }
+wayland-client = "0.31.1"
+wayland-backend = { version = "0.3.0", features = ["client_system"] }
