--- a/crates/kyo/Cargo.toml
+++ b/crates/kyo/Cargo.toml
@@ -24,5 +24,7 @@ smithay-client-toolkit.workspace = true
 wayland-client.workspace = true
 wayland-backend.workspace = true
 
+wgpu.workspace = true
+
 [dev-dependencies]
 tracing-subscriber.workspace = true
